# nouwii

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: nouwii.h
include/common/: bit.h  bswap.h  buffer.h  config.h  file.h  types.h
include/core/: dev_di.h  es.h  fs.h  hle.h  loader.h  memory.h  scheduler.h
include/hw/: ai.h  broadway.h  di.h  dsp.h  exi.h  hollywood.h  ipc.h  mi.h  pi.h  si.h  vi.h
src/: nouwii.c
src/common/: bit.c  bswap.c  buffer.c  file.c
src/core/: dev_di.c  es.c  fs.c  hle.c  loader.c  memory.c  scheduler.c
src/hw/: ai.c  broadway.c  di.c  dsp.c  exi.c  hollywood.c  ipc.c  mi.c  pi.c  si.c  vi.c
